--- a/SongNumber/SongNumber-Info.plist
+++ b/SongNumber/SongNumber-Info.plist
@@ -20,7 +20,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>softfront.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.htam86.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
